# internal/handlers/public.go
@@ -47,9 +47,9 @@ func setSessionCookie(w http.ResponseWriter, accessToken string) {
 // @Accept 		json
 // @Produce 	json
 // @Param 		user body models.RegisterRequest true "User"
-// @Success 	201 {object} models.User
-// @Failure 	400 {string} string "Bad Request. Possible causes:<br>• <b>invalid JSON payload</b><br>• <b>email registered</b>"
-// @Failure 	500 {string} string "Internal Server Error. Possible causes:<br>• <b>Internal Server Error</b><br>• <b>failed to hash password</b><br>• <b>failed to create user</b>"
+// @Success 	201 "Successfully Created"
+// @Failure 	400 {string} string "Bad Request. Possible causes:<br>• <b>Invalid JSON payload</b><br>• <b>Email registered</b>"
+// @Failure 	500 {string} string "Internal Server Error. Possible causes:<br>• <b>Internal Server Error</b><br>• <b>Failed to hash password</b><br>• <b>Failed to create user</b>"
 // @Router 		/auth/register [post]
 func (s *TaskRepository) Register() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -103,10 +103,10 @@ func (s *TaskRepository) Register() http.HandlerFunc {
 // @Accept 		json
 // @Produce 	json
 // @Param 		user body models.LoginRequest true "User"
-// @Success 	200 {object} models.User
-// @Failure		401 {string} string "incorrect email address or password"
-// @Failure 	400 {string} string "invalid JSON payload"
-// @Failure 	500 {string} string "failed to create access token"
+// @Success 	200 "Successfully logged in"
+// @Failure		401 {string} string "Incorrect email address or password"
+// @Failure 	400 {string} string "Invalid JSON payload"
+// @Failure 	500 {string} string "Failed to create access token"
 // @Router 		/auth/login  [post]
 func (s *TaskRepository) Login() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -156,6 +156,13 @@ func (s *TaskRepository) Login() http.HandlerFunc {
 	}
 }
 
+// Logout is used for the user logout.
+// @Summary 	Log a user out
+// @Description Delete the current user session Cookie
+// @Tags 		public
+// @Produce 	json
+// @Success 	200 "OK"
+// @Router 		/auth/logout  [post]
 func Logout(w http.ResponseWriter, r *http.Request) {
 	setSessionCookie(w, "")
 
